# Credit-Manager

./: .gitignore  README.md  package-lock.json  package.json  tailwind.config.js  vite.config.ts
src/: App.tsx  main.tsx  styles.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/src/: main.rs
src/components/: Creditors.tsx  Debts.tsx  Sidebar.tsx
src/components/creditor-comps/: AddCreditorForm.tsx
src/components/my-reusable-comps/: DataTable.tsx  SearchBox.tsx  ref.tsx
src/lib/: TrackerDB.ts  konnashDb.ts
